kubernetes/components/ext-auth/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ${EXT_AUTH_APP}-auth-callback
  annotations:
    gethomepage.dev/enabled: "false"
spec:
  hostnames: ["placeholder.local"] # will be replaced by kustomization
  parentRefs:
    - name: placeholder # will be replaced by kustomization
      namespace: network
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /outpost.goauthentik.io
    - backendRefs:
        - name: authentik-outpost-proxy
          namespace: security
          port: 9000
