kubernetes/components/ext-auth/securitypolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: ${EXT_AUTH_APP:-${APP}}
spec:
  extAuth:
    failOpen: false
    headersToExtAuth:
      - authorization
      - cookie
      - accept
      - proxy-authorization
      - x-forwarded-host
      - x-forwarded-proto
      - x-forwarded-for
      - x-forwarded-uri
      - x-real-ip
      - user-agent
    http:
      backendRefs:
        - name: ak-outpost-authentik-embedded-outpost
          namespace: security
          port: 9000
      headersToBackend:
        - authorization
        - set-cookie
        - x-authentik-email
        - x-authentik-entitlements
        - x-authentik-groups
        - x-authentik-meta-app
        - x-authentik-meta-outpost
        - x-authentik-meta-provider
        - x-authentik-meta-version
        - x-authentik-name
        - x-authentik-uid
        - x-authentik-username
        - x-forwarded-host
        - x-forwarded-proto
      path: /outpost.goauthentik.io/auth/envoy
  targetRefs:
    - group: ${EXT_AUTH_TARGET_GROUP:-gateway.networking.k8s.io}
      kind: ${EXT_AUTH_TARGET_KIND:-HTTPRoute}
      name: ${EXT_AUTH_TARGET_NAME:-${APP}}
